--- a/src/components/ItemsComp/Item/Item.css
+++ b/src/components/ItemsComp/Item/Item.css
@@ -1,6 +1,5 @@
 .media {
-  height: 0;
-  padding-top: 56.25%;
+  padding-top: 50%;
   background-color: rgba(0, 0, 0, 0.5);
   background-blend-mode: darken;
 }
@@ -17,6 +16,7 @@
   border-radius: 15px !important;
   height: 100%;
   position: relative;
+  max-width: 330px;
 }
 .overlay {
   display: inline-block;
@@ -38,7 +38,7 @@
 .details {
   display: flex;
   justify-content: space-between;
-  margin: 20px;
+  margin: 15px 15px 0 20px;
 }
 
 .cardActions {
