--- a/src/components/Particle/Particle.css
+++ b/src/components/Particle/Particle.css
@@ -1,7 +1,9 @@
 .particleComp {
+  width: 100%;
   height: 100%;
+  top: 0;
+  left: 0;
   position: absolute;
   width: 100%;
   z-index: -1;
 }
-/* TODO: Item Catalog BANK */
